# rv3029-rs

./: Cargo.toml  README.md
src/: datetime.rs  eeprom.rs  lib.rs  ram.rs  register_access.rs  run.rs  square_wave.rs
tests/: datetime.rs  hours.rs  seconds.rs  sqwout_output_level.rs  sqwout_rate.rs  user_ram.rs
tests/common/: mod.rs
