[package]
authors = ["Chris Rohlfs <chrisrohlfs@outlook.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Platform-agnostic Rust driver for the RV3029 real-time clock."
documentation = "https://docs.rs/rv3029"
edition = "2018"
homepage = "https://github.com/crohlfs/rv3029-rs"
include = [
  "/**/*.rs",
  "/Cargo.toml",
  "/CHANGELOG.md",
  "/README.md",
  "/LICENSE-MIT",
  "/LICENSE-APACHE",
]
keywords = ["rv3029", "rtc", "clock", "driver", "embedded-hal-driver"]
license = "MIT OR Apache-2.0"
name = "rv3029"
readme = "README.md"
repository = "https://github.com/crohlfs/rv3029-rs"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2.7"
rtcc = "0.3"

[dev-dependencies]
embedded-hal-mock = "0.8"
linux-embedded-hal = "0.3.2"

[profile.release]
lto = true
